# SprintEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Log.cpp  Log.h  README.md  main.cpp  sprintpch.h
assets/shaders/: GUIShader.shader  TestShader.shader
cmake/: FindLLVM.cmake  FindSDL2.cmake  RunCppParser.cmake
common/: Color.cpp  Color.h  IdAllocator.h  IntAlloc.h  clock.h  color.cpp  color.h  id_alloc.h  iterator_range.h  rect.h  rect_int.cpp  rect_int.h  sparse_map.h  sparse_set.cpp  sparse_set.h  time_span.h
common/ecs/: ecs.cpp  ecs.h
common/signals/: Delegate.h  Delegate_Test.cpp  Delegate_Test.h  delegate.h  event.h  function_ref.cpp  function_ref.h
core/: Application.cpp  Application.h  Event.cpp  Event.h  InputSystem.h  KeyCode.h  Log.cpp  Log.h  ModelLoader.h  MouseCodes.h  Window.cpp  Window.h  WindowEvent.cpp  WindowEvent.h  app_time.h  application.cpp  application.h  config.h  engine.cpp  engine.h  input_events.cpp  input_events.h  key_codes.h  log.cpp  log.h  main.cpp  mouse_codes.h  renderer.cpp  renderer.h  resources.h  scene.cpp  scene.h  window.cpp  window.h  window_event.h
core/components/: camera.cpp  camera.h  mesh_component.cpp  mesh_component.h  mesh_renderer.cpp  mesh_renderer.h  transform_component.cpp  transform_component.h
debug/: profiler.h
editor/: ImGui.h  components_gui.cpp  components_gui.h  editor_app.cpp  editor_app.h  editor_gui.cpp  editor_gui.h  game_view_gui.cpp  game_view_gui.h  gui.cpp  gui.h  imgui_impl.cpp  imgui_impl.h  imgui_renderer.cpp  imgui_renderer.h  main.cpp  properties_gui.cpp  properties_gui.h  scene_graph_gui.cpp  scene_graph_gui.h  scene_view_gui.cpp  scene_view_gui.h
math/: Matrix.cpp  Matrix.h  Quat.cpp  Quat.h  Vector.cpp  Vector.h  math_utils.h  matrix.cpp  matrix.h  quat.cpp  quat.h  transform.h  vector.cpp  vector.h
reflection/: field.h  meta_module.cpp  meta_registry.h  meta_runtime.cpp  meta_runtime.h  method.cpp  object.h  runtime.h  type.cpp  type.h  type_ids.cpp  type_info.cpp  type_info.h
reflection/generator/: cpp_parser.hpp  main.cpp
reflection/meta_module/common/: color.gen.h  rect.gen.h  rect_int.gen.h
reflection/meta_module/core/components/: camera.gen.h  mesh_component.gen.h  transform_component.gen.h
reflection/meta_module/math/: quat.gen.h  transform.gen.h  vector.gen.h
reflection/parser/: CMakeLists.txt  cpp_parser.hpp  main.cpp  test.hpp  testclass.hpp
renderer/: Camera.cpp  Camera.h  GL.cpp  GL.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexDataType.cpp  VertexDataType.h  VertexLayout.cpp  VertexLayout.h  gfx.cpp  gfx.h  gfx_config.h  gfx_details.cpp  gfx_details.h  render_texture.h  renderer_api_gl.cpp  renderer_api_gl.h  shader.cpp  texture.cpp  texture.h  vertex_layout.cpp  vertex_layout.h
sandbox/: imgui.ini  log
sandbox/assets/shaders/: GUIShader.shader  TestShader.shader
src/: sprintpch.h
src/common/: color.h  int_set.cpp  rect.h  rect_int.h  semaphore.h  sparse_map.h  sparse_set.h  time_span.cpp
src/common/ecs/: ecs.h
src/common/signals/: delegate.h  delegate_tests.cpp  event.h
src/core/: application.cpp  application.h  engine.cpp  engine.h  entity.h  input_events.h  key_codes.h  log.h  main.cpp  mouse_codes.h  renderer.cpp  renderer.h  resources.h  scene.cpp  scene.h  serializer.cpp  serializer.h  window.cpp  window_event.h
src/core/components/: camera.h  mesh_renderer.cpp  mesh_renderer.h  transform_component.cpp  transform_component.h
src/debug/: profiler.cpp  profiler.h
src/editor/: components_gui.h  editor_app.cpp  editor_app.h  editor_gui.h  game_view_gui.h  gui.cpp  imgui_renderer.cpp  imgui_renderer.h  main.cpp  properties_gui.cpp  scene_graph_gui.cpp  scene_view_gui.cpp  scene_view_gui.h
src/editor/common/: guid.cpp  guid.h
src/editor/gui/: components_gui.cpp  components_gui.h  editor_gui.h  game_view_gui.cpp  gui.cpp  gui.h  imgui_renderer.cpp  properties_gui.cpp  properties_gui.h  scene_graph_gui.cpp  scene_graph_gui.h  scene_view_gui.cpp  scene_view_gui.h
src/math/: matrix.h  quat.h  transform.h  vector.h
src/reflection/: field.cpp  field.h  meta_module.cpp  meta_module.h  meta_registry.cpp  meta_runtime.h  method.h  reference.h  type.cpp  type.h  type_ids.h
src/reflection/generator/: CMakeLists.txt
src/reflection/meta_module/common/: color.gen.h
src/reflection/meta_module/core/components/: camera.gen.h  mesh_renderer.gen.h
src/reflection/meta_module/math/: vector.gen.h
src/reflection/meta_module/src/common/: color.gen.h  rect.gen.h  rect_int.gen.h
src/reflection/meta_module/src/core/: scene.gen.h
src/reflection/meta_module/src/core/components/: camera.gen.h  mesh_renderer.gen.h  transform_component.gen.h
src/reflection/meta_module/src/math/: quat.gen.h  transform.gen.h  vector.gen.h
src/reflection/meta_module/src/renderer/: texture_import.gen.h
src/renderer/: gfx.cpp  gfx.h  gfx_config.cpp  gfx_details.cpp  gfx_details.h  render_texture.cpp  renderer_api_gl.cpp  renderer_api_gl.h  shader.cpp  shader.h  shader_utils.cpp  shader_utils.h  texture.cpp  texture.h  texture_import.cpp  texture_import.h  vertex_layout.cpp  vertex_layout.h
